manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-dev-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-dev
  template:
    metadata:
      labels:
        app: backend-dev
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001 # Ensure this user exists in your Docker image
      containers:
      - name: backend-dev
        image: harbor.devostack.com/dailykatas/backend-dev:latest
        ports:
        - containerPort: 3000
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
        resources:
          requests:
            memory: "2Gi" 
            cpu: "1"
          limits:
            memory: "4Gi" 
            cpu: "2"
        livenessProbe:
          httpGet:
            path: /healthz # Adjust this to your application's health check endpoint
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /healthz # Adjust this to your application's health check endpoint
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 3
      imagePullSecrets:
      - name: docker-k8s-secret
