manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-dev-service
spec:
  type: ClusterIP
  selector:
    app: backend-dev
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
